[package]
name = "rust-os"
version = "0.1.0"
edition = "2021"
authors = ["Robin Mattheussen <me@romatthe.dev>"]

[dependencies]
bootloader = "0.9.8" # Baked-in bootloader for Rust kernels
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"
volatile = "0.2.6"   # Smart-pointer for volatile memory access