[package]
name = "rust-os"
version = "0.1.0"
edition = "2021"
authors = ["Robin Mattheussen <me@romatthe.dev>"]

[dependencies]
bootloader = "0.9.8" # Baked-in bootloader for Rust kernels
lazy_static = { version = "1.0", features = ["spin_no_std"] }
pic8259 = "0.10.1"
spin = "0.5.2"
uart_16550 = "0.2.0"
volatile = "0.2.6"   # Smart-pointer for volatile memory access
x86_64 = "0.14.2"

[package.metadata.bootimage]
test-args = [
    # Special for device for controlling exitcode
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    # Serial UART for reporting test results
    "-serial", "stdio",
    # Don't show QEMU display
    "-display", "none"
]
test-success-exit-code = 33           # (0x10 << 1) | 1

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false